Fixed CSS for content alignment

--- a/src/components/cube.css
+++ b/src/components/cube.css
@@ -4,7 +4,7 @@
 .content {
     /* margin: 0 auto; */
     /* width: fit-content; */
-    max-width: 90vw;
+    max-width: 100vw;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
